--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "homepage": "https://github.com/lauhau/muisti#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
     "mongoose": "^4.4.12",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "semantic-ui-icon": "^2.1.7",
+    "shortid": "^2.2.6"
   }
 }
